Fix: Improve spacing in project view modal header (Issue #5637)

--- a/app/assets/stylesheets/components.scss
+++ b/app/assets/stylesheets/components.scss
@@ -184,6 +184,7 @@
 .primary-modal-header {
   background-color: $primary-green;
   border: 1px solid $primary-green;
+  justify-content: space-between;
   box-shadow: none;
 
   .modal-title {
